# qtquickplayground

./: CMakeLists.txt  CMakePresets.json  Main.qml  QtQuickPlayground.qmlproject  README.md  RedRect.qml  main.cpp  main.qrc  mainwindow.cpp  mainwindow.h  qmlmodules  simpleclient.pro
components/: GreenRect.qml  LineEdit.qml  qmldir
content/: App.qml  Screen01.ui.qml
imports/: CMakeLists.txt
imports/QtQuickPlayground/: CMakeLists.txt  qmldir
imports/QtQuickPlayground/designer/: plugin.metainfo
resources/: LineEdit.qml  main.qml
resources/components/: LineEdit2.qml
src/: import_qml_plugins.h
